--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,28 +1,57 @@
 :root {
+  --color-white: #ffffff;
   --background: #ffffff;
   --foreground: #171717;
-}
+  --color-primary: #042656;
+  --color-secondray: #F39C12;
+  --color-sidebar-bg: #042656;
+  --color-backdrop: rgba(107, 114, 128, 0.5);
+  --color-link: #303032;
+  --color-hover: #e5e7eb7a;
+  --color-active: #3b82f6;
+  --color-highlight: rgba(245, 246, 250, 0.5);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-border:#D9D9D9;
+
+  --sidebar-width-expanded: 18rem;
+  --sidebar-width-collapsed: 5.75rem;
+  --sidebar-width-mobile: 80%;
+  --sidebar-width-mobile-max: 18.75rem;
+  --icon-size-default: 1.5rem;
+  --icon-size-large: 2rem;
+  --text-size: 1rem;
+  --padding-base: 1rem;
+  --padding-small: 0.5rem;
+
+  --border-full: 100%;
+
+  --space-xs: 0.25rem;
+  --space-sm: 0.5rem;
+  --space-md: 0.75rem;
+  --space-lg: 1rem;
+  --space-xl: 1.5rem;
+  --space-2xl: 2rem;
+  --space-3xl: 3rem;
+  --space-4xl: 4rem;
+
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: 14px;
+
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 * {
   box-sizing: border-box;
@@ -33,10 +62,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
