--- a/src/component/Header/header.module.css
+++ b/src/component/Header/header.module.css
@@ -2,9 +2,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  justify-items: flex-start;
   padding: var(--space-lg);
   flex-wrap: wrap;
   border-bottom: 1px solid var(--color-border);
+}
+.titleWrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-items: flex-start;
+  gap: var(--space-md);
+
 }
 
 .title {
@@ -88,17 +97,17 @@
   color: #888;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .header {
     /* flex-direction: column; */
     align-items: flex-start;
     gap: var(--space-lg);
     padding: var(--space-md);
   }
+  
   .title {
-    font-size: var(--space-lg);
-    font-weight: 600;
-  }
+    display: none;
+   }
 
   .actions {
     flex-wrap: wrap;
@@ -113,12 +122,7 @@
   }
 }
 
-@media (max-width: 916) {
-  .title {
-    display: none;
-  
-  }
-}
+
 
 @media (min-width: 1024px) {
  .iconMenuButton{
